@@ -32,9 +32,8 @@ my $crlf_default = $^O eq 'MSWin32' ? 1 : 0;
 my $has_utf8_strict = eval { require PerlIO::utf8_strict };
 
 sub _text_layers {
-	my ($encoding, $options) = @_;
-	my $crlf = !! delete $options->{crlf};
-	$crlf = $crlf_default if $crlf eq 'auto';
+	my ($encoding, $crlf) = @_;
+	$crlf = $crlf_default if $crlf && $crlf eq 'auto';
 
 	if ($encoding =~ /^(latin|iso-8859-)1$/i) {
 		return $crlf ? ':unix:crlf' : ':raw';
@@ -49,9 +48,9 @@ sub _text_layers {
 }
 
 sub read_text {
-	my ($filename, $encoding, %options) = @_;
+	my ($filename, $encoding, $crlf) = @_;
 	$encoding ||= 'utf-8';
-	my $layer = _text_layers($encoding, \%options);
+	my $layer = _text_layers($encoding, $crlf);
 	return read_binary($filename) if $layer eq ':raw';
 
 	open my $fh, "<$layer", $filename or croak "Couldn't open $filename: $!";
@@ -59,9 +58,9 @@ sub read_text {
 }
 
 sub write_text {
-	my ($filename, undef, $encoding, %options) = @_;
+	my ($filename, undef, $encoding, $crlf) = @_;
 	$encoding ||= 'utf-8';
-	my $layer = _text_layers($encoding, \%options);
+	my $layer = _text_layers($encoding, $crlf);
 
 	open my $fh, ">$layer", $filename or croak "Couldn't open $filename: $!";
 	print $fh $_[1] or croak "Couldn't write to $filename: $!";
@@ -76,7 +75,7 @@ sub write_binary {
 sub read_lines {
 	my ($filename, $encoding, %options) = @_;
 	$encoding ||= 'utf-8';
-	my $layer = _text_layers($encoding, \%options);
+	my $layer = _text_layers($encoding, $options{crlf});
 
 	open my $fh, "<$layer", $filename or croak "Couldn't open $filename: $!";
 	return <$fh> if not %options;
@@ -87,12 +86,9 @@ sub read_lines {
 }
 
 sub read_dir {
-	my ($dirname, %options) = @_;
+	my ($dirname) = @_;
 	opendir my ($dir), $dirname or croak "Could not open $dirname: $!";
-	my @ret = grep { not m/ \A \.\.? \z /x } readdir $dir;
-	@ret = map { catfile($dirname, $_) } @ret if $options{prefix};
-	closedir $dir;
-	return @ret;
+	return grep { not m/ \A \.\.? \z /x } readdir $dir;
 }
 
 1;
@@ -110,17 +106,9 @@ B<DISCLAIMER>: this module is experimental, and may still change in non-compatib
 
 This module provides functions for fast and correct slurping and spewing. All functions are optionally exported.
 
-=func read_text($filename, $encoding, %options)
+=func read_text($filename, $encoding, $crlf)
 
-Reads file C<$filename> into a scalar and decodes it from C<$encoding> (which defaults to UTF-8). Can optionally take this named argument:
-
-=over 4
-
-=item * crlf
-
-This forces crlf translation on the input. The default for this argument is off. The special value C<auto> will set it to a platform specific default value.
-
-=back
+Reads file C<$filename> into a scalar and decodes it from C<$encoding> (which defaults to UTF-8). If C<$crlf> is true, crlf translation is performed. The default for this argument is off. The special value C<'auto'> will set it to a platform specific default value.
 
 =func read_binary($filename)
 
@@ -138,25 +126,17 @@ C<chomp> the lines.
 
 =back
 
-=func write_text($filename, $content, $encoding, %options)
+=func write_text($filename, $content, $encoding, $crlf)
 
-Writes C<$content> to file C<$filename>, encoding it to C<$encoding> (which defaults to UTF-8). It can optionally take a C<crlf> named argument that works exactly as in read_text.
+Writes C<$content> to file C<$filename>, encoding it to C<$encoding> (which defaults to UTF-8). It can also take a C<crlf> argument that works exactly as in read_text.
 
 =func write_binary($filename, $content)
 
 Writes C<$content> to file C<$filename> as binary data.
 
-=func read_dir($dirname, %options)
+=func read_dir($dirname)
 
-Open C<dirname> and return all entries except C<.> and C<..>. Can optionally take this named argument:
-
-=over 4
-
-=item * prefix
-
-This will prepend C<$dir> to the entries
-
-=back
+Open C<dirname> and return all entries except C<.> and C<..>.
 
 =head1 TODO
 
